--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-.js-project1-weatherapp",
   "version": "1.0.0",
   "description": "a weather app project",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +13,8 @@
   "author": "BenHmida mohamed aziz",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "axios": "^1.4.0",
+    "express": "^4.18.2",
+    "request": "^2.88.2"
   }
 }
